<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#175AE1">

    <TextView
        android:textColor="@color/colorText"
        android:text="@string/main_title"
        android:fontFamily="@font/arial_rounded_mt_bold"
        android:gravity="center"
        android:textSize="@dimen/main_title_font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:hint="@string/hint_nome"
        style="@style/input_wizard"
        android:id="@+id/et_nome"
        android:textSize="@dimen/text"
        android:textColorHint="@color/colorHint"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"/>

    <EditText
        android:hint="@string/hint_nota1"
        style="@style/input_wizard"
        android:id="@+id/et_nota1"

        android:textSize="@dimen/text"
        android:textColorHint="@color/colorHint"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/et_nome"
        app:layout_constraintStart_toStartOf="@+id/et_nome"
        app:layout_constraintEnd_toEndOf="@+id/et_nome"
        android:inputType="numberDecimal"/>

    <EditText
        android:hint="@string/hint_nota2"
        style="@style/input_wizard"
        android:id="@+id/et_nota2"
        android:textSize="@dimen/text"
        android:textColorHint="@color/colorHint"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/et_nota1"
        app:layout_constraintStart_toStartOf="@+id/et_nota1"
        app:layout_constraintEnd_toEndOf="@+id/et_nota1"
        android:inputType="numberDecimal"/>

    <Button
        style="@style/custom_button"
        android:text="@string/button_calcular"
        android:id="@+id/bt_calcular"
        android:onClick="calcular"
        app:layout_constraintTop_toBottomOf="@+id/et_nota2"
        app:layout_constraintStart_toStartOf="@+id/et_nota2"
        app:layout_constraintEnd_toEndOf="@+id/et_nota2"
        app:layout_constraintBottom_toBottomOf="@id/tv_resultado"
        />

    <TextView
        android:text="Resultado"
        style="@style/text_resultado"
        android:id="@+id/tv_resultado"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/bt_calcular"
        app:layout_constraintStart_toStartOf="@+id/bt_calcular"
        app:layout_constraintEnd_toEndOf="@+id/bt_calcular"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>